{
    "version": 1,
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "6e51adb3-ae68-4382-9cc1-41c032ae2df9",
            "actions": [
                {
                    "name": "RightPlayer1",
                    "type": "Button",
                    "id": "1967f4ec-5a41-4fb8-a7a0-6e0e48e5aad0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightPlayer2",
                    "type": "Button",
                    "id": "966b0e95-34e1-4765-ad22-f6e27341afef",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftPlayer1",
                    "type": "Button",
                    "id": "eb3197c5-6cdc-4118-b09c-b2cafe90d485",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftPlayer2",
                    "type": "Button",
                    "id": "85527f82-fa30-4e0d-94bb-fdb99f16d18b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JumpPlayer1",
                    "type": "Button",
                    "id": "4e8929f3-75f1-499b-9324-a786e6ebef1b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JumpPlayer2",
                    "type": "Button",
                    "id": "8c2f05d1-0f45-4b6d-9e6d-7f30b561286f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SlidePlayer1",
                    "type": "Button",
                    "id": "ff88061c-b079-49fa-b826-6969c569b58b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SlidePlayer2",
                    "type": "Button",
                    "id": "0ab80ed1-f45c-4df5-ac02-7cedd9587e99",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mask1Player1",
                    "type": "Button",
                    "id": "e0db7b1b-3963-4b21-a1a4-f4cb543bb25b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mask1Player2",
                    "type": "Button",
                    "id": "4965e556-f392-41f2-8e7b-4bb53b2fb514",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mask2Player1",
                    "type": "Button",
                    "id": "715a3a81-c5ff-4dbc-9817-f462e9af51a6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mask2Player2",
                    "type": "Button",
                    "id": "e3abfbd4-acbd-4351-baa6-c6c8c57103c3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mask3Player1",
                    "type": "Button",
                    "id": "d3bb945c-0736-41d8-8737-d552b53a6ece",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mask3Player2",
                    "type": "Button",
                    "id": "2b47b631-2407-476c-9a14-045e4749b87c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrevMaskPlayer1",
                    "type": "Button",
                    "id": "b1b7f020-dd4f-44bb-91ab-c5d68cc4e3de",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrevMaskPlayer2",
                    "type": "Button",
                    "id": "7a8255c4-45ba-4853-a0b1-2a4ed069055b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextMaskPlayer1",
                    "type": "Button",
                    "id": "bddee44f-11d9-4856-85c8-bdffbd044d13",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextMaskPlayer2",
                    "type": "Button",
                    "id": "eab2ffaa-1102-4bc9-9e47-d6d4786698b8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseMaskPlayer1",
                    "type": "Button",
                    "id": "373ebbad-c758-4cbc-8e8d-24da85f79b29",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseMaskPlayer2",
                    "type": "Button",
                    "id": "790b7f42-1c85-4788-a2ad-29fde9724e81",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "fdf4a53c-a2c2-4482-aaae-79b7fec24abd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b1b8e56e-62cc-4854-9f60-df1e3b35f17b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightPlayer1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43b43cf3-97c0-4097-916f-e79bcf309c30",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightPlayer2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c72b379-2525-47f6-aaa8-613b4020bc22",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftPlayer1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e561894-b091-4415-9c97-af80ed051bed",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftPlayer2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba84367e-d58b-49b4-9e5d-8a54e94ff715",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpPlayer1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39da35e5-5ab9-4d48-b956-8482b6fac885",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpPlayer2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60ec399b-fee1-4050-b296-86c3965402b1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SlidePlayer1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b9c8641-edd6-42df-b3e5-f618918f3e3a",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SlidePlayer2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8481db69-20aa-43c9-b4b1-03ad13587ef0",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mask1Player1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b6a81ab-53bb-4bd3-b7c4-e2cd8e6226dd",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mask1Player2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7c782e1-0e1b-435b-97a1-95df7e6f9263",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mask2Player1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "353b48e4-d356-4983-a6ec-d83df200d8b4",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mask2Player2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "195220f8-7c43-4813-8012-527dabc4b9b2",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mask3Player1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e2696a1-69b0-4fc7-9071-8d1318538d1e",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mask3Player2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8168ac9-028a-4d5b-a9c6-9cb5ac52a8a9",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrevMaskPlayer1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c634355f-1233-45ab-8dd8-c47c219f521c",
                    "path": "<Keyboard>/u",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrevMaskPlayer2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43d63fee-c20e-4c30-9c5e-cb51c5a01cea",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextMaskPlayer1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fb91412-e5cc-441f-813f-ad4d007b612d",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextMaskPlayer2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7eb0e7cb-04fb-4977-8636-95f5ed551b08",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseMaskPlayer1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7452b1e3-9398-4209-b719-ae01e26fb3b9",
                    "path": "<Keyboard>/รถ",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseMaskPlayer2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1fc25cf8-05ab-441f-8aaf-4d4e9743e9f9",
                    "path": "<Keyboard>/semicolon",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseMaskPlayer2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aced2b86-7c37-48db-b91c-7c91f89e03ff",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}